# Python-Projects

Image Processing/: JPGtoPNGConvertor.py  pillow.py
Sending Emails with Python/: .env  main.py
Sending whatsapp messages with Python/: main.py  pyproject.toml
password-leaks-checker/: .env  main.py  readme.md
pdf_merger/: pdf_merger.py
playing with pdfs/: pdf_merger.py
twitter_bot/: main.py
