[tool.poetry]
name = "sending whatsapp messages with python"
version = "0.1.0"
description = ""
authors = ["amaan8429 <mohdamaan8429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywhatkit = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
